# txt2048

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
tests/: integration_test.rs
